tests/should_fail/unsafe.stderr
error[E0133]: call to unsafe function `evil` is unsafe and requires unsafe function or block
 --> unsafe.rs:8:5
  |
8 |     evil();
  |     ^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
